fix: about me background too small on smaller devices

--- a/src/assets/css/about_me/aboutme.css
+++ b/src/assets/css/about_me/aboutme.css
@@ -26,3 +26,9 @@
 .about_me_right {
     width: 50%;
 }
+
+@media only screen and (max-width: 1082px) {
+    .about_me {
+        height: 100vh;
+    }
+}
